fix: only allow dark mode and fix spacing for home text

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -20,7 +20,7 @@ h1 {
 
 .home-text {
 	align-self: center;
-	min-width: 400px;
+	/* min-width: 400px; */
 	max-width: 40rem;
 }
 
@@ -31,8 +31,13 @@ h1 {
 	font-weight: 400;
 }
 
+.motto-text {
+	margin-bottom: 0rem;
+	padding-bottom: 1rem;
+}
+
 .name {
-	font-size: min(6.5rem, 15vw);
+	font-size: min(6.5rem, 14vw);
 	margin-top: 1rem;
 	margin-bottom: 1rem;
 }
@@ -48,6 +53,6 @@ h1 {
 @media (max-width: 725px) {
 	.home-block {
 		flex-direction: column;
-		justify-content: space-evenly;
+		justify-content: center;
 	}
 }
