--- a/src/theme.css
+++ b/src/theme.css
@@ -1,5 +1,6 @@
 :root {
-	color-scheme: light dark;
+	/* color-scheme: light dark; */
+	color-scheme: dark;
 }
 
 /* @media (prefers-color-scheme: dark) { */
